--- a/asset/css/styles.css
+++ b/asset/css/styles.css
@@ -1,5 +1,12 @@
+#toplevel_page_wp-app-store .wp-menu-image {
+  background: url("../img/wpas-icon.png") no-repeat 6px -27px; }
+#toplevel_page_wp-app-store.wp-menu-open .wp-menu-image, #toplevel_page_wp-app-store:hover .wp-menu-image {
+  background-position: 6px 3px; }
+#toplevel_page_wp-app-store img {
+  display: none; }
+
 #icon-wp-app-store {
-  background: url("../../../../../wp-admin/images/icons32.png?ver=20100531") no-repeat scroll -370px -5px transparent; }
+  background: url("../img/wpas-icon-32.png") no-repeat; }
 
 #wp-app-store > .header {
   border-bottom: 1px solid #ccc;
@@ -7,12 +14,22 @@
   overflow: hidden;
   margin-bottom: 20px; }
   #wp-app-store > .header h2 {
-    float: left; }
-  #wp-app-store > .header .login {
-    float: right;
-    font-size: 14px;
-    margin-top: 1.2em;
+    float: left;
+    font-family: Georgia, "Times New Roman", "Bitstream Charter", Times, serif; }
+  #wp-app-store > .header a {
     text-decoration: none; }
+  #wp-app-store > .header .actions {
+    float: right;
+    color: #999;
+    font-size: 14px;
+    margin-top: 1.2em; }
+  #wp-app-store > .header .sep {
+    margin: 0 0.5em;
+    color: #ccc; }
+#wp-app-store a:focus {
+  color: #21759B; }
+#wp-app-store a:hover {
+  color: #D54E21; }
 #wp-app-store .section-title {
   margin-bottom: 15px; }
   #wp-app-store .section-title h3 {
@@ -20,45 +37,62 @@
     font-size: 1.4em;
     font-weight: normal;
     margin-top: 0; }
-#wp-app-store .product-grid {
-  overflow: hidden; }
-  #wp-app-store .product-grid .product {
-    width: 31%;
-    margin: 0 3% 2% 0;
-    display: block;
-    text-decoration: none;
-    float: left; }
-    #wp-app-store .product-grid .product.last-col {
-      margin-right: 0; }
-    #wp-app-store .product-grid .product img {
-      width: 100%;
-      display: block;
-      margin-bottom: 0.8em;
-      border: 1px solid #ccc; }
-    #wp-app-store .product-grid .product h4 {
-      font-size: 1.4em;
-      margin: 0;
-      display: inline;
-      color: #333; }
-    #wp-app-store .product-grid .product .publisher {
-      display: inline;
-      margin: 0;
-      color: #999;
-      white-space: nowrap;
-      font-size: 1.1em; }
-    #wp-app-store .product-grid .product .caption {
-      margin-left: 0.5em; }
-    #wp-app-store .product-grid .product:hover h4 {
-      color: #666; }
-#wp-app-store .home .product-grid.themes {
-  margin-bottom: 20px;
-  border-bottom: 1px solid #ccc; }
-#wp-app-store .home .section-title a {
+#wp-app-store .product-grid .product {
+  width: 32%;
+  margin: 0 2% 2% 0;
+  display: block;
   text-decoration: none;
-  color: #999;
-  margin-left: 0.5em; }
-  #wp-app-store .home .section-title a:hover {
+  float: left; }
+  #wp-app-store .product-grid .product:nth-of-type(3n), #wp-app-store .product-grid .product.last-col {
+    margin-right: 0; }
+  #wp-app-store .product-grid .product img {
+    width: 100%;
+    display: block;
+    margin-bottom: 0.8em;
+    border: 1px solid #ccc; }
+  #wp-app-store .product-grid .product h4 {
+    font-size: 1.4em;
+    margin: 0;
+    display: inline;
+    color: #333; }
+  #wp-app-store .product-grid .product .publisher {
+    display: inline;
+    margin: 0;
+    color: #999;
+    white-space: nowrap;
+    font-size: 1.1em; }
+  #wp-app-store .product-grid .product .caption {
+    margin-left: 0.5em; }
+  #wp-app-store .product-grid .product:hover h4 {
     color: #666; }
+#wp-app-store .home {
+  overflow: hidden; }
+  #wp-app-store .home .product-grid {
+    width: 46.5%;
+    padding-bottom: 200px; }
+    #wp-app-store .home .product-grid .product {
+      width: 48.5%;
+      margin: 0 0 3% 0; }
+      #wp-app-store .home .product-grid .product:nth-of-type(2n), #wp-app-store .home .product-grid .product.last-col {
+        float: right; }
+  #wp-app-store .home .product-grid.themes {
+    float: left; }
+  #wp-app-store .home .product-grid.plugins {
+    float: right; }
+  #wp-app-store .home .grid-sep {
+    float: left;
+    width: 4%;
+    height: 1000px;
+    margin: 0 1.5%;
+    background: url(../img/grid-sep.png); }
+  #wp-app-store .home .more-link {
+    clear: both; }
+  #wp-app-store .home .more {
+    text-decoration: none;
+    color: #999;
+    margin-left: 0.5em; }
+    #wp-app-store .home .more:hover {
+      color: #666; }
 #wp-app-store .product.single .sidebar {
   float: left;
   width: 30%; }
@@ -67,10 +101,10 @@
   width: 100%;
   border: 1px solid #ccc;
   margin-bottom: 20px; }
-#wp-app-store .product.single .buy {
+#wp-app-store .product.single .install {
   overflow: hidden;
   margin-bottom: 40px; }
-#wp-app-store .product.single .buy-button {
+#wp-app-store .product.single .install-button {
   background-color: #7fbf4d;
   background-image: -webkit-gradient(linear, left top, left bottom, from(#7fbf4d), to(#63a62f));
   /* Saf4+, Chrome */
@@ -81,17 +115,17 @@
   background-image: linear-gradient(top, #7fbf4d, #63a62f);
   border: 1px solid #63a62f;
   border-bottom: 1px solid #5b992b;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  -ms-border-radius: 3px;
-  -o-border-radius: 3px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
   border-radius: 5px;
   -webkit-box-shadow: inset 0 1px 0 0 #96ca6d;
   -moz-box-shadow: inset 0 1px 0 0 #96ca6d;
   -ms-box-shadow: inset 0 1px 0 0 #96ca6d;
   -o-box-shadow: inset 0 1px 0 0 #96ca6d;
   box-shadow: inset 0 1px 0 0 #96ca6d;
-  color: #BAF0B4;
+  color: #D7FFD7;
   line-height: 1.5;
   padding: 10px 0 8px 0;
   text-align: center;
@@ -104,7 +138,8 @@
   text-transform: uppercase;
   display: block;
   float: right; }
-  #wp-app-store .product.single .buy-button:hover {
+  #wp-app-store .product.single .install-button:hover {
+    color: #BAF0B4;
     background-color: #76b347;
     background-image: -webkit-gradient(linear, left top, left bottom, from(#76b347), to(#5e9e2e));
     /* Saf4+, Chrome */
@@ -119,7 +154,7 @@
     -o-box-shadow: inset 0 1px 0 0 #8dbf67;
     box-shadow: inset 0 1px 0 0 #8dbf67;
     cursor: pointer; }
-  #wp-app-store .product.single .buy-button:active {
+  #wp-app-store .product.single .install-button:active {
     border: 1px solid #5b992b;
     border-bottom: 1px solid #538c27;
     -webkit-box-shadow: inset 0 0 8px 4px #548c29, 0 1px 0 0 #eeeeee;
@@ -140,81 +175,41 @@
   margin-bottom: 2em;
   border-top: 1px solid #ccc;
   border-bottom: 1px solid #ccc;
-  padding: 1.8em 0; }
+  padding: 1em 0; }
   #wp-app-store .product.single .links li {
     display: inline;
     margin-right: 2%;
-    font-size: 1.2em; }
+    border-right: 1px solid #ccc;
+    padding-right: 2%; }
+  #wp-app-store .product.single .links li:last-of-type {
+    border: 0; }
   #wp-app-store .product.single .links a {
-    background: url(../img/icon-external-link.gif) center right no-repeat;
-    padding-right: 17px;
-    background-color: #d7e5f5;
-    background-image: -webkit-gradient(linear, left top, left bottom, from(#d7e5f5), to(#cbe0f5));
-    /* Saf4+, Chrome */
-    background-image: -webkit-linear-gradient(top, #d7e5f5, #cbe0f5);
-    background-image: -moz-linear-gradient(top, #d7e5f5, #cbe0f5);
-    background-image: -ms-linear-gradient(top, #d7e5f5, #cbe0f5);
-    background-image: -o-linear-gradient(top, #d7e5f5, #cbe0f5);
-    background-image: linear-gradient(top, #d7e5f5, #cbe0f5);
-    border-top: 1px solid #abbbcc;
-    border-left: 1px solid #a7b6c7;
-    border-bottom: 1px solid #a1afbf;
-    border-right: 1px solid #a7b6c7;
-    -webkit-border-radius: 12px;
-    -moz-border-radius: 12px;
-    -ms-border-radius: 12px;
-    -o-border-radius: 12px;
+    text-decoration: none;
+    font-size: 1.1em;
+    /*
+    border: 1px solid #ccc;
+    padding: 0.6em 1em 0.5em 1em;
     border-radius: 15px;
-    -webkit-box-shadow: inset 0 1px 0 0 white;
-    -moz-box-shadow: inset 0 1px 0 0 white;
-    -ms-box-shadow: inset 0 1px 0 0 white;
-    -o-box-shadow: inset 0 1px 0 0 white;
-    box-shadow: inset 0 1px 0 0 white;
-    color: #1a3e66;
-    line-height: 1;
-    padding: 0.7em 1.4em 0.6em 1.4em;
-    font-size: 12px;
-    text-align: center;
-    text-shadow: 0 1px 1px #fff;
-    text-decoration: none; }
-    #wp-app-store .product.single .links a:hover {
-      background-color: #ccd9e8;
-      background-image: -webkit-gradient(linear, left top, left bottom, from(#ccd9e8), to(#c1d4e8));
-      /* Saf4+, Chrome */
-      background-image: -webkit-linear-gradient(top, #ccd9e8, #c1d4e8);
-      background-image: -moz-linear-gradient(top, #ccd9e8, #c1d4e8);
-      background-image: -ms-linear-gradient(top, #ccd9e8, #c1d4e8);
-      background-image: -o-linear-gradient(top, #ccd9e8, #c1d4e8);
-      background-image: linear-gradient(top, #ccd9e8, #c1d4e8);
-      border-top: 1px solid #a1afbf;
-      border-left: 1px solid #9caaba;
-      border-bottom: 1px solid #96a3b3;
-      border-right: 1px solid #9caaba;
-      -webkit-box-shadow: inset 0 1px 0 0 #f2f2f2;
-      -moz-box-shadow: inset 0 1px 0 0 #f2f2f2;
-      -ms-box-shadow: inset 0 1px 0 0 #f2f2f2;
-      -o-box-shadow: inset 0 1px 0 0 #f2f2f2;
-      box-shadow: inset 0 1px 0 0 #f2f2f2;
-      color: #163659;
-      cursor: pointer; }
-    #wp-app-store .product.single .links a:active {
-      border: 1px solid #8c98a7;
-      -webkit-box-shadow: inset 0 0 4px 2px #abbccf, 0 0 1px 0 #eeeeee;
-      -moz-box-shadow: inset 0 0 4px 2px #abbccf, 0 0 1px 0 #eeeeee;
-      -ms-box-shadow: inset 0 0 4px 2px #abbccf, 0 0 1px 0 #eeeeee;
-      -o-box-shadow: inset 0 0 4px 2px #abbccf, 0 0 1px 0 #eeeeee;
-      box-shadow: inset 0 0 4px 2px #abbccf, 0 0 1px 0 #eeeeee; }
+    */ }
+    #wp-app-store .product.single .links a span {
+      background: url(../img/icon-external-link.gif) right top no-repeat;
+      padding-right: 17px; }
 #wp-app-store .product.single .info, #wp-app-store .product.single .requirements {
   font-size: 1.1em; }
 #wp-app-store .product.single .more {
   text-decoration: none; }
+  #wp-app-store .product.single .more span {
+    font-size: 0.7em;
+    position: relative;
+    top: -0.1em; }
 #wp-app-store .product.single .screenshots ul {
   overflow: hidden;
   margin: 0; }
 #wp-app-store .product.single .screenshots li {
   float: left;
-  width: 23.5%;
-  margin: 0 2% 2% 0; }
+  width: 18.8%;
+  margin: 0 1.4% 1.4% 0; }
+#wp-app-store .product.single .screenshots:nth-of-type(5n),
 #wp-app-store .product.single .screenshots .last-col {
   margin-right: 0; }
 #wp-app-store .product.single .screenshots img {
@@ -240,7 +235,8 @@
     padding-bottom: 0.5em; }
 #wp-app-store .paging {
   text-align: center;
-  padding-top: 20px; }
+  padding-top: 20px;
+  clear: both; }
   #wp-app-store .paging a {
     font-size: 1.1em;
     border: 1px solid #ccc;
@@ -259,6 +255,24 @@
 #wp-app-store .archive .section-title span {
   color: #999;
   margin-left: 0.5em; }
+#wp-app-store .archive .product-grid {
+  float: left;
+  width: 83%; }
+#wp-app-store .archive .sidebar {
+  float: right;
+  width: 15%;
+  background-color: #eee;
+  height: 1000px; }
+#wp-app-store .installing .featured-image {
+  width: 30%;
+  float: left;
+  border: 1px solid #ccc; }
+#wp-app-store .installing .details {
+  width: 65%;
+  float: left;
+  margin-left: 2%; }
+#wp-app-store .installing p {
+  font-size: 1.1em; }
 
 @media screen and (min-width: 1024px) {
   #wp-app-store .product.single .main {
