--- a/asset/css/styles.css
+++ b/asset/css/styles.css
@@ -26,7 +26,7 @@ body, td, textarea, input, select {
     float: right;
     color: #999;
     font-size: 14px;
-    margin-top: 1.2em; }
+    margin: 1.2em 1em 0 0; }
   #wp-app-store > .header .sep {
     margin: 0 0.5em;
     color: #ccc; }
