--- a/asset/css/styles.scss
+++ b/asset/css/styles.scss
@@ -160,7 +160,7 @@ body, td, textarea, input, select { font-size: 12px; }
             float: right;
             color: #999;
             font-size: 14px;
-            margin-top: 1.2em;
+            margin: 1.2em 1em 0 0;
         }
         
         .sep {
