--- a/asset/css/styles.css
+++ b/asset/css/styles.css
@@ -316,9 +316,9 @@ body, td, textarea, input, select {
   #wp-app-store .archive .sidebar .newsletter input {
     width: 98%;
     margin-bottom: 8px; }
-  #wp-app-store .archive .sidebar .newsletter button {
+  #wp-app-store .archive .sidebar button {
     color: #666; }
-    #wp-app-store .archive .sidebar .newsletter button:hover {
+    #wp-app-store .archive .sidebar button:hover {
       color: #333; }
 #wp-app-store .installing .featured-image {
   width: 30%;
